--- a/force-app/main/default/classes/checkInController.cls
+++ b/force-app/main/default/classes/checkInController.cls
@@ -25,7 +25,7 @@ public without sharing class checkInController {
             if(String.isNotBlank(resourceId)){
                 glist = [SELECT Id,Check_In_By__c,Check_In_By__r.Name,Pulse_Id__c,Check_in_Date__c,Feedback_and_Comments__c,
                          Career_Development_Rating__c,Communication_Rating__c,Feedback_and_Recognition_Rating__c,Job_Satisfaction_Rating__c,
-                         Leadership_and_Management_Rating__c,Work_Environment_Rating__c,Work_Life_Balance_Rating__c,Rating__c,Overall_Rating__c,Goal_Name__c,Status__c,
+                         Leadership_and_Management_Rating__c,Work_Environment_Rating__c,Work_Life_Balance_Rating__c,Goal_Name__c,Status__c,
                          //Smaske : Added Overall_Pulse_Rating__c for PM_027
                          Overall_Pulse_Rating__c FROM Goal__c 
                          //smaske [UAT_037] : replacing Resource__c with CheckInBy 
@@ -33,7 +33,7 @@ public without sharing class checkInController {
             }else{
                  glist = [SELECT Id,Check_In_By__c,Check_In_By__r.Name,Pulse_Id__c,Check_in_Date__c,Feedback_and_Comments__c,
                          Career_Development_Rating__c,Communication_Rating__c,Feedback_and_Recognition_Rating__c,Job_Satisfaction_Rating__c,
-                         Leadership_and_Management_Rating__c,Work_Environment_Rating__c,Work_Life_Balance_Rating__c,Rating__c,Overall_Rating__c,Goal_Name__c,Status__c,
+                         Leadership_and_Management_Rating__c,Work_Environment_Rating__c,Work_Life_Balance_Rating__c,Goal_Name__c,Status__c,
                          //Smaske : Added Overall_Pulse_Rating__c for PM_027
                          Overall_Pulse_Rating__c FROM Goal__c 
                          WHERE RecordTypeId=:checkinRecordTypeId AND Check_In_By__r.EMS_TM_User__c=:Userinfo.getUserId()  AND CreatedDate >=:startdate and CreatedDate <=:enddate ORDER BY CreatedDate DESC ];
@@ -53,7 +53,7 @@ public without sharing class checkInController {
             cw.workLifeRating = gc.Work_Life_Balance_Rating__c;
             cw.FeedbackRating = gc.Feedback_and_Recognition_Rating__c;
             cw.LeadershipRating = gc.Leadership_and_Management_Rating__c;
-            cw.overallRating = gc.Overall_Rating__c;
+            //cw.overallRating = gc.Overall_Rating__c;
             //Smaske : Added for PM_027
             cw.overallPulseRating = gc.Overall_Pulse_Rating__c;
              cList.add(cw);
