--- a/force-app/main/default/classes/myMetricsController.cls
+++ b/force-app/main/default/classes/myMetricsController.cls
@@ -616,7 +616,7 @@ return menteeRecords;
                                      FROM Contact 
                                      WHERE Id = :contactId];
         
-        list<Resource_Resource_Relationship__c> mentorlst =[Select id,Relationship_Type__c,Resource__c from Resource_Resource_Relationship__c 
+        list<Resource_Resource_Relationship__c> mentorlst =[Select id,Relationship_Type__c,Resource__c,Resource_Reports_To__c from Resource_Resource_Relationship__c 
                                                          where Relationship_Type__c='Mentor' AND Resource__c=:contactId];
         
         if (contactList.isEmpty()) {
@@ -648,7 +648,7 @@ return menteeRecords;
                                            pmAnswer.Project_Name__c = projectId;
                                            pmAnswer.Fiscal_Year__c = goalList[0].Fulfillment__r.Fiscal_Year__c;
                                            pmAnswer.KRA__c = goalList[0].Id;
-                                           pmAnswer.Mentor__c=mentorlst[0].Id;
+                                           pmAnswer.Mentor__c=mentorlst[0].Resource_Reports_To__c!=null?mentorlst[0].Resource_Reports_To__c:null;
                                            pmAnswer.RecordTypeId = answerRecordTypeId;
                                            pmAnswerList.add(pmAnswer);
                                        }
